mas detalles de un producto en el catalogo de la pagina principal hecho

--- a/estilos/general.css
+++ b/estilos/general.css
@@ -33,3 +33,12 @@
         order: 2;
     }
 }
+
+
+/*Mas detalles*/
+
+.cantidad {
+    padding: .3rem .6rem;
+    border-radius: 15px;
+    margin-bottom: 1rem;
+}
